# LOOM-Train

./: .gitignore  .readthedocs.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: index.zh.md  (+3 more)
loomtrain/: __init__.py  pyproject.toml  requirements.txt
loomtrain/core/: __init__.py  _loop.py  actor.py  arguments.py  datamodule.py  distributed_sampler.py  metas.py  module.py  state.py  strategy.py  trainer.py  visualization.py
loomtrain/core/data/: __init__.py  distributed_sampler.py  utils.py
loomtrain/core/device/: mesh.py
loomtrain/core/modeling/: __init__.py  actor.py  actors.py  loss.py
loomtrain/core/optim/: warmupcosine.py
loomtrain/core/parallel/: __init__.py  parallel_state.py
loomtrain/core/strategies/: __init__.py
loomtrain/core/tasks/: __init__.py  sft.py
loomtrain/core/utils/: __init__.py  init_hf.py  lora.py  sequence.py
loomtrain/dataset/: __init__.py  base.py  blended.py  preference.py  pretrain.py  sft.py
loomtrain/help/: __init__.py  version.py
loomtrain/help/cli/: version.py
loomtrain/modeling/: __init__.py  gpt.py  rl.py  rm.py
loomtrain/scripts/: train_dpo.py  train_pt.py  train_sft.py  train_simpo.py  train_simpo_classifier.py
loomtrain/strategy/: __init__.py  base.py
loomtrain/strategy/deepspeed/: deepspeed.py  utils.py
loomtrain/tasks/: __init__.py  cdt.py  dpo.py  pt.py  sft.py  simpo.py
loomtrain/trainer/: __init__.py  base.py  dpo.py  general.py  sft.py  simpo.py
loomtrain/utils/: distributed_sampler.py  lora.py  ring_attn.py  sequence.py  tensorboard.py  wandb.py
(+64 files in other folders)
